# listenbrainz-playlist-uploader

./: .pre-commit-config.yaml  Cargo.toml  README.md  config.toml.example
.github/workflows/: make_release.yaml  rust_build_and_test.yml
src/: audio_data.rs  feedback.rs  listenbrainz_client.rs  main.rs  paginator.rs  playlist.rs
tests/: test_playlist_1.m3u
