[package]
name = "listenbrainz_playlist_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
audiotags = "0.4.1"
clap = { version = "4.4.14", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
config = "0.13.4"
env_logger = "0.10.1"
governor = "0.6.0"
log = "0.4.20"
m3u = "1.0.0"
num-traits = "0.2.17"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_json = { version = "1.0.111", features = [] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
url = "2.5.0"
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
indicatif = { version = "0.17.7", features = ["tokio", "futures"] }
serde_test = "1.0.176"
