[package]
name = "listenbrainz-playlist-uploader"
description = "A tool for uploading playlists to ListenBrainz with feedback"
authors = ["Serene-Arc"]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Serene-Arc/listenbrainz-playlist-uploader"
readme = "README.md"
keywords = ["listenbrainz", "musicbrainz", "playlist", "music"]
categories = ["command-line-utilities", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
audiotags = "0.4.1"
clap = { version = "4.4.14", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
config = "0.13.4"
env_logger = "0.10.1"
governor = "0.6.0"
log = "0.4.20"
m3u = "1.0.0"
num-traits = "0.2.17"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_json = { version = "1.0.111", features = [] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
url = "2.5.0"
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
indicatif = { version = "0.17.7", features = ["tokio", "futures"] }
serde_test = "1.0.176"
musicbrainz_rs = "0.5.0"
inquire = "0.6.2"
cached = { version = "0.47.0", features = ["proc_macro", "async"] }
clap-markdown = "0.1.3"
ffprobe = "0.4.0"
uuid = { version = "1.9.1", features = ["serde"] }
